# eLib

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  fly.toml
backend/src/: db.rs  lib.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: book.rs  book_chapter.rs  book_segment.rs  mod.rs  voice_session.rs
backend/src/routes/: book.rs  chat.rs  mod.rs
backend/src/services/: book_service.rs  epub_service.rs  gemini_service.rs  gutenberg_service.rs  image_service.rs  mod.rs  pdf_service.rs  storage_service.rs
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: types.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(root)/books/[slug]/: page.tsx
frontend/src/app/(root)/books/new/: page.tsx
frontend/src/app/api/my-books/: route.ts
frontend/src/app/api/my-books/[slug]/: route.ts
frontend/src/components/chat/: BookChat.tsx
frontend/src/components/reader/: EpubReader.tsx  PdfReader.tsx
frontend/src/components/ui/: BookCard.tsx  ClaimTracker.tsx  DraggableAiButton.tsx  Dropzone.tsx  MyLibrarySection.tsx  Navbar.tsx  ScrollIndicator.tsx  UploadForm.tsx  VoiceCard.tsx  library-hero.tsx
frontend/src/lib/: constants.ts  utils.ts
