[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
mongodb = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
sentry = "0.34"
pdf-extract = "0.7"
