[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart", "json"] }
tokio = { version = "1.37", features = ["full"] }
mongodb = { version = "3.6", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
sentry = "0.34"
pdf-extract = "0.7"
lopdf = "0.33"
anyhow = "1.0"
tempfile = "3.10"
aws-config = "1.8.16"
aws-sdk-s3 = "1.131.0"
uuid = { version = "1.23.1", features = ["v4"] }
base64 = "0.22.1"
epub = "2.1.5"
html2text = "0.17.1"
